{
  "sourceLanguage" : "en",
  "strings" : {
    "**Modified:** %@" : {

    },
    "**Status:** %@" : {

    },
    "^[%lld issue](inflect: true)" : {

    },
    "Actions" : {

    },
    "ADD SAMPLES" : {

    },
    "Add tag" : {

    },
    "Add Tags" : {

    },
    "All" : {

    },
    "All Issues" : {
      "extractionState" : "manual"
    },
    "Awards" : {

    },
    "Basic Information" : {

    },
    "Cancel" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取り消す"
          }
        }
      }
    },
    "Close Issue" : {

    },
    "Closed" : {
      "comment" : "This issue has been resolved by the user.",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "非公開"
          }
        }
      }
    },
    "CLOSED" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "非公開"
          }
        }
      }
    },
    "Copy Issue Title" : {

    },
    "Date Created" : {

    },
    "Date Modified" : {

    },
    "Delete" : {

    },
    "Description" : {

    },
    "Details" : {

    },
    "Enter the issue description here" : {

    },
    "Enter the issue title here" : {

    },
    "Filter" : {

    },
    "Filter issues, or type # to add tags" : {

    },
    "Filters" : {
      "extractionState" : "manual"
    },
    "High" : {

    },
    "Issues" : {

    },
    "Locked" : {

    },
    "Low" : {

    },
    "Medium" : {

    },
    "New issue" : {
      "comment" : "Create a new issue"
    },
    "New Issue" : {

    },
    "New name" : {

    },
    "New tag" : {
      "comment" : "Create a new tag"
    },
    "Newest to Oldest" : {

    },
    "No Issue Selected" : {

    },
    "No tags" : {
      "comment" : "This user has not created any tags."
    },
    "OK" : {

    },
    "Oldest to Newest" : {

    },
    "Open" : {
      "comment" : "This issue is currently unresolved."
    },
    "Priority" : {

    },
    "Re-open Issue" : {

    },
    "Recent Issues" : {
      "extractionState" : "manual"
    },
    "Rename" : {

    },
    "Rename tag" : {

    },
    "Show awards" : {

    },
    "Smart Filters" : {

    },
    "Sort By" : {

    },
    "Sort Order" : {

    },
    "Status" : {

    },
    "Tags" : {

    },
    "Title" : {

    },
    "Turn Filter Off" : {

    },
    "Turn Filter On" : {

    },
    "Unlocked: %@" : {

    }
  },
  "version" : "1.0"
}